--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,1 @@
-token = "" # Токен пользователя
-
-command = "start" # Команда для вызова
-
-attachment = "" # Прикрепляющий материал
-text = "" # Текст сообщения
+token = "" # Токен пользователя(ей)
