--- a/config.toml
+++ b/config.toml
@@ -1,1 +1,9 @@
-token = "" # Токен пользователя(ей)
+token = [""] # Токен пользователя(ей)
+
+["start"] # Команда для вызова. Чтобы прописать русские символы или поставить пробел, текст надо писать в ""
+attachment = "" # Вложение
+text = "" # Текст сообщения
+
+[gus]
+attachment = "doc514714577_640721672" # Вложение
+text = "" # Текст сообщения
